Mini cart implementation

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -10,6 +10,7 @@
 
   --vt-c-indigo: #2c3e50;
 
+  --muted: #c2bebe;
   --dark-blue: #0e0063;
   --main-gradient-bg: linear-gradient(87.77deg, #dbcdf1 1.88%, #dfdfe9 51.92%, #dcd7e5 97.2%);
 
@@ -68,22 +69,14 @@ body {
   transition:
     color 0.5s,
     background-color 0.5s;
-  line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@keyframes ripple-effect {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
 }
