--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12,7 +12,6 @@
 
   --muted: #c2bebe;
   --dark-blue: #02000e;
-  --main-gradient-bg: linear-gradient(87.77deg, #dbcdf1 1.88%, #dfdfe9 51.92%, #dcd7e5 97.2%);
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -24,13 +23,15 @@
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
-  --border-1: 4px;
-  --border-2: 8px;
-  --border-3: 12px;
-  --border-4: 16px;
-  --border-circle: 50%;
-
-  --z-index-max: 2000
+  --border-radius-1: 4px;
+  --border-radius-2: 8px;
+  --border-radius-3: 12px;
+  --border-radius-4: 16px;
+  --border-radius-5: 20px;
+  --border-radius-6: 24px;
+  --border-v-circle: 50%;
+  --muted-bg: rgba(0, 0, 0, 0.04);
+  --z-index-max: 2000;
 }
 
 /* semantic color variables for this project */
