--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -23,17 +23,17 @@ body {
   width: 100%;
   max-width: 400px;
   border: 1px solid #b1afaf;
-  border-radius: 4px;
+  border-radius: var(--border-radius-1);
   display: flex;
   align-items: center;
   gap: 4px;
   background-color: #fff;
-  border-radius: var(--border-2);
+  border-radius: var(--border-radius-2);
 
   input {
     border: none;
     box-shadow: none;
-    min-height: 40px;
+    min-height: 50px;
     padding: 5px 10px;
     background-color: transparent;
     width: 100%;
@@ -53,7 +53,7 @@ body {
 }
 
 .mainBorder {
-  border-radius: var(--border-2);
+  border-radius: var(--border-radius-2);
 }
 
 .textTitle {
@@ -120,7 +120,7 @@ body {
 .mainButton {
   min-height: 34px;
   border: none;
-  border-radius: 16px;
+  border-radius: var(--border-radius-4);
   font-size: 1.2em;
   background-color: var(--dark-blue);
   color: white;
