--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -19,6 +19,12 @@ body {
   display: flex;
 }
 
+a {
+  text-decoration: none;
+  color: unset;
+  font-weight: unset;
+}
+
 .mainField {
   width: 100%;
   max-width: 400px;
@@ -149,6 +155,12 @@ body {
     &:hover {
       background-color: var(--dark-blue);
       color: #fff;
+
+      svg {
+        path {
+          stroke: #fff;
+        }
+      }
     }
   }
 }
